--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lagom</title>
 </head>
+
 <body>
     <h1>Hello world</h1>
-    <form method="post" action="/list">
+    <iframe name="formSending" style="display: none;"></iframe>
+    <form method="post" action="/list" target="formSending">
         <label for="input-text">Input text</label>
         <input type="text" id="input-text" name="text" placeholder="Enter text">
         <button type="submit" id="submit-data">Submit</button>
     </form>
-    
+
 </body>
+
 </html>
